--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csuci_online_game_showcase",
+  "name": "csuci-online-game-showcase",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,15 +7,14 @@
     "start": "eleventy --serve",
     "build": "eleventy"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/CSUCI-Game-Development-Program/csuci_online_game_showcase.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@11ty/eleventy": "^1.0.2",
-    "sass": "^1.58.0"
-  },
   "dependencies": {
-    "bootstrap": "^5.3.0-alpha1",
-    "liquidjs": "^10.4.0"
+    "@11ty/eleventy": "^2.0.0"
   }
 }
