--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@11ty/eleventy": "^2.0.0",
     "autoprefixer": "^10.4.13",
+    "bootstrap": "^5.3.0-alpha1",
     "postcss-cli": "^10.1.0"
   },
   "devDependencies": {
