--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.idea/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -105,4 +106,4 @@ dist
 
 # Generated assets
 
-/public/games
+/public/
